Align items on page correctly

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.plant-info {
+  display: flex;
+  justify-content:center;
+  gap: 52px;
+}
+
+.plant-info .vertical {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
 }
 
 /* do not edit this footer */
